--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.8.0",
     "@mui/lab": "^5.0.0-alpha.83",
     "@mui/material": "^5.8.1",
+    "@mui/styles": "^5.8.0",
     "@nextui-org/react": "^1.0.0-beta.7",
     "firebase": "^9.8.1",
     "formik": "^2.2.9",
