--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.8.1",
     "@mui/styles": "^5.8.0",
     "@nextui-org/react": "^1.0.0-beta.7",
+    "axios": "^0.27.2",
     "firebase": "^9.8.1",
     "formik": "^2.2.9",
     "formik-mui": "^4.0.0-alpha.3",
